# deep-search

./: README.md  pyproject.toml
agent/: llm.py  main_agent.py  prompts.py
agent/subagents/: db_query_agent.py  knowledge_base_agent.py  network_search_agent.py
api/: context.py  server.py
output/session_572a2d04-c38f-49ab-b584-933ea0d30757/: 空调漏水处理指南.md
prompt/: prompts.yaml
tools/: db_tools.py  ragflow_tools.py  read_file_content.py  tavily_tool.py
utils/: path_utils.py
