[project]
name = "deep-search"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=23.0.0",
    "deepagents>=0.1.0",
    "fastapi>=0.100.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "mysql-connector-python>=8.0.0",
    "openai>=1.0.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pypdf>=3.0.0",
    "python-docx>=1.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
    "ragflow-sdk>=0.1.0",
    "requests>=2.31.0",
    "tavily-python>=0.3.0",
    "typing-extensions>=4.5.0",
    "uvicorn[standard]>=0.20.0",
]
